<fix>sign_in_z-index

--- a/app/frontend/stylesheets/all_pages.scss
+++ b/app/frontend/stylesheets/all_pages.scss
@@ -14,7 +14,6 @@ a{
   border: solid 1px rgb(192, 180, 180);
   box-shadow: 12px 12px 7px rgba(0, 0, 0, 0.2);
   margin-bottom: 100px;
-  z-index: 10000;
 }
 .item-wrap{
   display: flex;
@@ -211,6 +210,7 @@ body{
         margin: 0;
         padding: 0;
         transition: 0.5s;
+        z-index: 100000;
         strong{
           a{
             display: block;
@@ -224,6 +224,7 @@ body{
       .sign-in-buttons-open{
         height: 88px;
         transition: 0.5s;
+        
       }
     
     }
@@ -459,7 +460,7 @@ body{
 .footer-edit{
   padding: 0;
   position: absolute;
-  bottom: 70px;
+  bottom: 120px;
   left: 300px;
 }
 
